Added a battery_manager page and database tables for batteries and battery logs.

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <title>FRC 4123 Scouting</title>
 <link rel="stylesheet" href="/css/style.css"/>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+
 </head>
 <body>
 <!-- Mobile navigation -->
@@ -23,6 +24,7 @@
   <a href="/pages/raw_match_edit.html" class="admin-only" onclick="toggleMenu()">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html" class="admin-only" onclick="toggleMenu()">Raw Pit Data Edit</a>
+  <a href="/pages/battery_manager.html" onclick="toggleMenu()">Battery Manager</a>
   <a href="/pages/csv_upload.html" class="admin-only" onclick="toggleMenu()">CSV Upload</a>
   <a href="/pages/config_creator.html" onclick="toggleMenu()">Config Creator</a>
   <a href="/pages/admin.html" class="admin-only" onclick="toggleMenu()">User Management</a>
@@ -87,6 +89,7 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_match_edit.html" class="admin-only">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html" class="admin-only">Raw Pit Data Edit</a>
+  <a href="/pages/battery_manager.html">Battery Manager</a>
   <a href="/pages/csv_upload.html" class="admin-only">CSV Upload</a>
   <a href="/pages/config_creator.html">Config Creator</a>
   <a href="/pages/admin.html" class="admin-only">User Management</a>
