--- a/public/pages/admin.html
+++ b/public/pages/admin.html
@@ -14,7 +14,6 @@
   <div class="mobile-menu" id="mobileMenu">
   <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
   <a href="/" onclick="toggleMenu()">Home</a>
-  <a href="/pages/pit_procedures.html" onclick="toggleMenu()">Pit Procedures</a>
   <a href="/pages/ondeck.html" onclick="toggleMenu()">Ondeck</a>
   <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
   <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
@@ -25,6 +24,7 @@
   <a href="/pages/raw_match_edit.html" class="admin-only" onclick="toggleMenu()">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html" onclick="toggleMenu()">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html" class="admin-only" onclick="toggleMenu()">Raw Pit Data Edit</a>
+  <a href="/pages/battery_manager.html" onclick="toggleMenu()">Battery Manager</a>
   <a href="/pages/csv_upload.html" class="admin-only" onclick="toggleMenu()">CSV Upload</a>
   <a href="/pages/config_creator.html" onclick="toggleMenu()">Config Creator</a>
   <a href="/pages/admin.html" class="admin-only" onclick="toggleMenu()">User Management</a>
@@ -79,7 +79,6 @@ document.addEventListener('touchmove', function(event) {
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
-  <a href="/pages/pit_procedures.html">Pit Procedures</a>
   <a href="/pages/ondeck.html">Ondeck</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
@@ -90,6 +89,7 @@ document.addEventListener('touchmove', function(event) {
   <a href="/pages/raw_match_edit.html" class="admin-only">Raw Match Data Edit</a>
   <a href="/pages/raw_pit.html">Raw Pit Data</a>
   <a href="/pages/raw_pit_edit.html" class="admin-only">Raw Pit Data Edit</a>
+  <a href="/pages/battery_manager.html">Battery Manager</a>
   <a href="/pages/csv_upload.html" class="admin-only">CSV Upload</a>
   <a href="/pages/config_creator.html">Config Creator</a>
   <a href="/pages/admin.html" class="admin-only">User Management</a>
