Made sure pit_procedures could be seen, and added some extra functionality. Also fixed a bug with the battery manager page.

--- a/public/pages/team_event_lookup.html
+++ b/public/pages/team_event_lookup.html
@@ -711,6 +711,7 @@
   <div class="mobile-menu" id="mobileMenu">
   <button class="mobile-menu-close" onclick="toggleMenu()">×</button>
   <a href="/" onclick="toggleMenu()">Home</a>
+  <a href="/pages/pit_procedures.html" onclick="toggleMenu()">Pit Procedures</a>
   <a href="/pages/ondeck.html" onclick="toggleMenu()">Ondeck</a>
   <a href="/pages/match_scouting.html" onclick="toggleMenu()">Match Scouting</a>
   <a href="/pages/pit_scouting.html" onclick="toggleMenu()">Pit Scouting</a>
@@ -776,6 +777,7 @@ document.addEventListener('touchmove', function(event) {
 <!-- Original navbar (hidden on mobile) -->
 <nav class="navbar">
   <a href="/">Home</a>
+  <a href="/pages/pit_procedures.html">Pit Procedures</a>
   <a href="/pages/ondeck.html">Ondeck</a>
   <a href="/pages/match_scouting.html">Match Scouting</a>
   <a href="/pages/pit_scouting.html">Pit Scouting</a>
